--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>신지은 기술 블로그</title>
+    <title>신지은 기술 블로그!!!</title>
+    <link rel="stylesheet" href="common.css">
     <style>
         body {
-            background-color:green;
+            background-color: green;
         }
     </style>
 </head>
+
 <body>
     <h1>
-    신지은 기술 블로그
+        신지은 기술 블로그 입니다.
     </h1>
-    <div>
-        123666
-    </div>
-</body>
-</html>
+</body></html>
